# promptanalysis

./: .gitignore  Dockerfile  README.md  app_util.py  app_util_old.py  index.html  main.py  pyproject.toml  requirements.txt  test_groq.py
.marscode/: deviceInfo.json
